user list design completed

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -36,3 +36,13 @@
 	background-color:#f5f5f5;
 	color:#666;
 }
+
+.user_description{
+	color:#222222;
+	font-size:16px;
+}
+
+.follower_count_in_user{
+	font-size:15px;
+	color:#2a8be9;
+}
