--- a/app/assets/stylesheets/search.css.scss
+++ b/app/assets/stylesheets/search.css.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the search controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.search_div{
+	background-color:#222222;
+}
+
+#keyword{
+	border-radius:20px;
+}
+
+.input-group-addon{
+	background-color:transparent;
+	border:0px;
+}
+
+.search_submit{
+	@extend .input-group-addon;
+	color:#2a8be9;
+	font-size:18px;
+}
