--- a/app/views/search/_show_messages.html.erb
+++ b/app/views/search/_show_messages.html.erb
@@ -1,38 +1,50 @@
 <!-- messages -->
-<%if @tab_class[:messages] == "btn-primary" %>
+<%if @tab_class[:messages] == "btn-active" %>
   <% if @messages %>
     <div class="container" id="content_users">
       <% @messages.each do |message| %>
-        <% user = User.find(message.user_id) %>
+      <% user = User.find(message.user_id) %>
         <div class="row">
-          <div class="col-xs-4">
-              <%= image_tag user.avatar.url(:medium) %>
+          <div class="col-xs-3">
+            <a href="<%= user_path(user)%>">
+              <%= image_tag user.avatar.url(:medium), :width => "100%",:height => "100%", :class => "round_border" %>
+            </a>
           </div>
-          <div class="col-xs-7 well" style="vertical-align:middle;">
-            <p><%= message.message %></p></div>
-        </div>
-        <div class="row">
-            <div class="col-xs-4" style="text-align:center;">
-              <a href="<%= user_path(user)%>" align="center">
-                <em id="user_id_<%=user.id%>" value="user_id_<%=user.id%>">
-                  <%= user.user_name %>
-                </em>
-              </a>
+          <div class="col-xs-9" style="vertical-align:middle;">
+            <span class="user_name">
+              <%= user.user_name %>
+            </span>        
+            <% if user.user_type %>
+              <span class="cafe badge">
+                Cafe
+              </span>
+            <% end %>
+            <div class="message_time">
+              <%= message.created_at.strftime("%Y/%m/%d %I:%M%p") %>
             </div>
+            <br/>
+            <div class="message_message" >
+              <%=message.message%>
+              <%if message.attached_img_file_name %>
+                <br/><br/>
+                <%= image_tag message.attached_img.url(:original), :width => "100%" %>
+              <%end%>
+            </div>
+          </div>
         </div>
         <div class="row"><div class="col-xs-12"><hr></div></div>
       <% end %>
-      <br/>
       <!-- paging -->
+      <br/>
       <div class="row">
-        <div class="col-xs-12">
-          <%= paginate @messages, :window => 1%>
+        <div class="col-xs-12 text-center">
+          <%= paginate @messages ,:window => 1%>
           <br/>
         </div>
       </div>
-  </div>
+    </div>
   <% else %>
       no search result
-  <% end 
-end %>
+  <% end %>
+<% end %>
   
