--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,39 +6,8 @@
 </div>
 <br/>
 
-<!-- follower list -->
+<!-- user list -->
 <div class="container" id="content_users">
-  <% @users.each do |user| %>
-    <div class="row">
-      <div class="col-xs-3">
-        <a href="<%= user_path(user)%>">
-          <%= image_tag user.avatar.url(:medium), :width => "100%",:height => "100%", :class => "round_border" %>
-        </a>
-      </div>
-      <div class="col-xs-9" style="vertical-align:middle;">
-        <span class="user_name">
-          <%= user.user_name %>
-        </span>        
-        <% if user.user_type %>
-          <span class="cafe badge">
-            Cafe
-          </span>
-        <% end %>
-        <br/><br/>
-        <div class="user_description" >
-          <%= user.description %>        
-        </div>
-      </div>
-    </div>
-    <div class="row"><div class="col-xs-12"><hr></div></div>
-  <% end %>
-  <br/>
-  <!-- paging -->
-  <br/>
-  <div class="row">
-  <div class="col-xs-12 text-center">
-    <%= paginate @users ,:window => 1%>
-    <br/>
-  </div>
+  <%= render "/shared/user_list", users: @users%>
 </div>
   
