--- a/app/views/shared/_common_header.html.erb
+++ b/app/views/shared/_common_header.html.erb
@@ -28,5 +28,10 @@
 </nav>
 <div class="nav-padding"></div>
 <% if notice %>
-<p id="notice"><%=notice%></p>
+  <div class="container profile_background">
+    <div class="row-fluid">
+      <br/>
+      <p id="notice"><%=notice%></p>
+    </div>
+  </div>
 <% end %>
