--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -10,11 +10,6 @@
 	border-left: 1px solid;
 }
 
-/* 회원가입 화면 */
-.sign_up_form{
-	background-image: url("/images/singup_bg01.png");
-	background-position: top center;
-}
 
 /* User show */
 .profile_background{
@@ -47,3 +42,48 @@
 	font-size:15px;
 	color:#2a8be9;
 }
+
+/* 회원가입 화면 */
+.body-signup {
+	max-width: 330px;
+	background-image: url("/images/singup_bg02.png");
+	background-position: top center;
+	padding: 15px;
+	margin: 0 auto;	
+}
+
+.form-signup .form-signup-heading,
+.form-signup .checkbox {
+	margin-bottom: 10px;
+}
+
+.form-signup .checkbox {
+	font-weight: large;
+}
+
+.form-signup .form-control {
+	position: relative;
+	font-size: 16px;
+	height: auto;
+	padding: 10px;
+	-webkit-box-sizing: border-box;
+	   -moz-box-sizing: border-box;
+	        box-sizing: border-box;
+}
+
+.form-signup .form-control:focus {
+	z-index: 2;
+}
+
+.form-signup .user_name {
+	margin-bottom: -1px;
+	border-bottom-left-radius: 0;
+	border-bottom-right-radius: 0;
+}
+
+.form-signup .phone_no {
+	margin-bottom: 10px;
+	border-top-left-radius: 0;
+	border-top-right-radius: 0;
+}
+
