--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,14 +1,13 @@
-<%= render "/shared/common_header", title: "Messages" %>
+<%= render "/shared/common_header", title: "New Message" %>
 
 <!-- message -->
 <%= form_for @message, :method => "post", :html => { :multipart => true } do |form| %>
   <div class="container">
-    <div class="row-fluid">
+    <div class="row">
       <div>
         <div class="form-group">
           <div class="controls">
-            <label>메시지 입력</label>
-            <%= form.text_area :message,:class=> 'form-control', :rows => '5' ,:maxlength =>140 ,:placeholder => "지금 무엇을 하고 있나요?"%> <br>
+            <%= form.text_area :message,:class=> 'form-control', :rows => '7' ,:maxlength =>140 ,:placeholder => "Write New Message"%> <br>
           </div>
         </div>
       </div>
@@ -26,10 +25,10 @@
           <div class="fileinput-preview fileinput-exists thumbnail" style="max-width: 200px; max-height: 200px;"></div>
           <div>
             <br/>
-            <span class="btn btn-default btn-file"><span class="fileinput-new">이미지 추가</span><span class="fileinput-exists">변경</span>
+            <span class="btn btn-default btn-file btn-info"><span class="fileinput-new">Image</span><span class="fileinput-exists">Change</span>
               <%= form.file_field :attached_img %>
             </span>
-            <a href="#" class="btn btn-default fileinput-exists" data-dismiss="fileinput">취소</a>
+            <a href="#" class="btn btn-default fileinput-exists" data-dismiss="fileinput">Cancel</a>
           </div>
         </div>
       </div>
@@ -38,12 +37,13 @@
   </div>
 
   <% if @current_user.user_type %>
+  <hr/>
   <div class="container">
     <div class="row">
       <div class="col-xs-1"></div>
       <div class="col-xs-10">
         <div class='input-group date' id='datetimepicker'>
-          <%= form.text_field :expired_at ,:placeholder=>"새글 만료일시",:class=>"form-control" ,"data-format"=>"YYYY/MM/DD HH:mm:ss"%>
+          <%= form.text_field :expired_at ,:placeholder=>"Expired at ...",:class=>"form-control" ,"data-format"=>"YYYY/MM/DD HH:mm"%>
           <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
           </span>
         </div>
@@ -52,7 +52,7 @@
     </div>
   </div>
   <% end %>
-
+<hr/>
   <div class="container">
     <div class="row-fluid">
       <div>
