API Server environment config change. User created only for checking IP in API Server

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -6,7 +6,9 @@
 </div>
 <br/>
 
-<%= render "/shared/message_list", messages: @messages, current_user: @current_user %>
+<div class="container">
+	<%= render "/shared/message_list", messages: @messages, current_user: @current_user %>
+</div>
 
 <br/></br></br></br>
 
