--- a/app/views/shared/_user_list.html.erb
+++ b/app/views/shared/_user_list.html.erb
@@ -20,7 +20,7 @@
       </div>
     </div>
   </div>
-  <div class="row"><div class="col-xs-12"><hr></div></div>
+  <div class="row"><div class="col-xs-12"><br/></div></div>
 <% end %>
 <br/>
 <div class="col-xs-12 text-center">
