--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,6 +4,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
+<% if notice %>
+  <div class="container profile_background">
+    <div class="row-fluid">
+      <br/>
+      <p id="notice"><%=notice%></p>
+    </div>
+  </div>
+<% end %>
+
 <body class="body-signup">
 
 <div class="container">
