datepicker bug fix

--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -66,3 +66,11 @@
   </div>
 
 <% end %>
+
+<script>
+  (function($) {
+    $(document).ready(function () {
+      $('#datetimepicker').datetimepicker();
+    });
+  })(jQuery);
+</script>
