no items to display added

--- a/app/views/search/_show_users.html.erb
+++ b/app/views/search/_show_users.html.erb
@@ -34,7 +34,9 @@
 		</br/>
     </div>
     <% else %>
-        no search result
+      <div class="row-fluid">
+	   No items to display
+	  </div>
     <% end %>
   </div> 
 <% end %>
