--- a/app/views/search/_show_messages.html.erb
+++ b/app/views/search/_show_messages.html.erb
@@ -1,50 +1,52 @@
 <!-- messages -->
 <%if @tab_class[:messages] == "btn-active" %>
+  <div class="container" id="content_users">
   <% if @messages %>
-    <div class="container" id="content_users">
-      <% @messages.each do |message| %>
-      <% user = User.find(message.user_id) %>
-        <div class="row">
-          <div class="col-xs-3">
-            <a href="<%= user_path(user)%>">
-              <%= image_tag user.avatar.url(:medium), :width => "100%",:height => "100%", :class => "round_border" %>
-            </a>
-          </div>
-          <div class="col-xs-9" style="vertical-align:middle;">
-            <span class="user_name">
-              <%= user.user_name %>
-            </span>        
-            <% if user.user_type %>
-              <span class="cafe badge">
-                Cafe
-              </span>
-            <% end %>
-            <div class="message_time">
-              <%= message.created_at.strftime("%Y/%m/%d %I:%M%p") %>
-            </div>
-            <br/>
-            <div class="message_message" >
-              <%=message.message%>
-              <%if message.attached_img_file_name %>
-                <br/><br/>
-                <%= image_tag message.attached_img.url(:original), :width => "100%" %>
-              <%end%>
-            </div>
-          </div>
-        </div>
-        <div class="row"><div class="col-xs-12"><hr></div></div>
-      <% end %>
-      <!-- paging -->
-      <br/>
+    <% @messages.each do |message| %>
+    <% user = User.find(message.user_id) %>
       <div class="row">
-        <div class="col-xs-12 text-center">
-          <%= paginate @messages ,:window => 1%>
+        <div class="col-xs-3">
+          <a href="<%= user_path(user)%>">
+            <%= image_tag user.avatar.url(:medium), :width => "100%",:height => "100%", :class => "round_border" %>
+          </a>
+        </div>
+        <div class="col-xs-9" style="vertical-align:middle;">
+          <span class="user_name">
+            <%= user.user_name %>
+          </span>        
+          <% if user.user_type %>
+            <span class="cafe badge">
+              Cafe
+            </span>
+          <% end %>
+          <div class="message_time">
+            <%= message.created_at.strftime("%Y/%m/%d %I:%M%p") %>
+          </div>
           <br/>
+          <div class="message_message" >
+            <%=message.message%>
+            <%if message.attached_img_file_name %>
+              <br/><br/>
+              <%= image_tag message.attached_img.url(:original), :width => "100%" %>
+            <%end%>
+          </div>
         </div>
       </div>
+      <div class="row"><div class="col-xs-12"><hr></div></div>
+    <% end %>
+    <!-- paging -->
+    <br/>
+    <div class="row">
+      <div class="col-xs-12 text-center">
+        <%= paginate @messages ,:window => 1%>
+        <br/>
+      </div>
     </div>
-  <% else %>
-      no search result
-  <% end %>
+  <%else%>
+    <div class="row-fluid">
+       No items to display
+    </div>
+  <%end%>
+</div>
 <% end %>
   
