--- a/app/views/shared/_user_list.html.erb
+++ b/app/views/shared/_user_list.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-xs-3">
         <a href="<%= user_path(user)%>">
-          <%= image_tag user.avatar.url(:medium), :width => "100%",:height => "100%", :class => "round_border" %>
+          <%= image_tag user.avatar.url(:medium), :width => "75px",:height => "75px", :class => "round_border" %>
         </a>
       </div>
       <div class="col-xs-9" style="vertical-align:middle;">
